# metatron

./: .clangd  .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  garnix.yaml
.github/workflows/: ci.yml
cmake/: classify.cmake  collect.cmake  connect.cmake  deploy.cmake  evaluate.cmake  link.cmake  metatron-config.cmake.in  prepare.cmake
exe/: setup.cmake
exe/engine/: main.cpp  setup.cmake
exe/renderer/: main.cpp  setup.cmake
exe/tracer/: main.cpp  setup.cmake
exe/tsssni-engine/: main.cpp  setup.cmake
ext/argparse/: setup.cmake
ext/assimp/: setup.cmake
ext/cpptrace/: setup.cmake
ext/entt/: setup.cmake
ext/eve/: setup.cmake
ext/glaze/: setup.cmake
ext/heitz/: setup.cmake
ext/metal/: setup.cmake
ext/mimalloc/: setup.cmake
ext/nanovdb/: FindNanoVDB.cmake  setup.cmake
ext/openimageio/: setup.cmake
ext/openvdb/: FindOpenVDB.cmake  setup.cmake
ext/proxy/: setup.cmake
ext/rgb2spec/: rgb2spec.cpp  setup.cmake
ext/slang/: setup.cmake
ext/spirv-cross/: setup.cmake
ext/stb/: setup.cmake  stb_image_write.cpp
ext/tevipc/: setup.cmake
ext/tinyexr/: setup.cmake
ext/tinyimageio/: setup.cmake
ext/vulkan/: setup.cmake
lib/: setup.cmake
lib/glfw/: setup.cmake
lib/mimalloc/: setup.cmake
lib/rgb2spec/: rgb2spec.cpp
lib/stb/: stb_image.cpp
lib/tinyexr/: setup.cmake  tinyexr.cpp
lib/vulkan/: setup.cmake
nix/: default.nix
shader/: metatron.slang  post-process.kernel.slang  postprocess.kernel.slang  trace.kernel.slang
shader/metatron/: core.slang  render.slang  resource.slang
share/spectra/: CIE-X.vspd  CIE-Z.vspd  glass-FK51A.eta.dspd  glass-LASF9.eta.dspd  glass-SF10.eta.dspd  glass-SF11.eta.dspd  glass-SF5.eta.dspd
spec/: grammar.ebnf
src/: setup.cmake
src/asset/: image.cpp
src/core/: main.cpp  setup.cmake
src/device/: setup.cmake  texture.cpp
src/geometry/: setup.cmake
src/hierarchy/: transform.cpp
src/image/: image.cpp  (+1 more)
(+918 files in other folders)
